# LB_2

./: .travis.yml  CMakeLists.txt  Doxyfile  Lb_1.1.1  README.txt  ReadMe.txt  lb_1.1  main.cpp  master_file.txt  ne_test_GA.txt  operations.cpp  operations.h  test_GA.txt  test_file.txt
.github/workflows/: build.yml  check_file.yml  generate-docs.yml
CPP/: CMakeLists.txt  main.cpp
LIB/: CMakeLists.txt  operations.cpp  operations.h
html/: files.html  globals.html  globals_func.html  main_8cpp.html  main_8cpp__incl.dot  operations_8cpp.html  operations_8cpp__incl.dot  operations_8h.html  operations_8h__dep__incl.dot  operations_8h__incl.dot  operations_8h_source.html
html/search/: all_3.js  all_4.js
latex/: files.tex  main_8cpp.tex  operations_8cpp.tex  operations_8h.tex  operations_8h_source.tex  refman.aux  refman.dvi  refman.idx  refman.out  refman.tex  refman.toc
